Minor spacing fix

--- a/src/styling/RightSideContent.sass
+++ b/src/styling/RightSideContent.sass
@@ -31,6 +31,12 @@ $secondary-gold-color: var(--secondary-gold-color)
     bottom: 0
     transform: translate(-50%, 50%)
 
+  section
+    margin: auto 0
+    display: flex
+    flex-direction: column
+    gap: 3mm
+
   .section-header
     font-size: 6.5mm
     font-family: 'Josefin Slab', serif
@@ -45,12 +51,6 @@ $secondary-gold-color: var(--secondary-gold-color)
       background-color: #111
       border-radius: 321312px
       display: block
-
-  section
-    margin: 10mm 0
-    display: flex
-    flex-direction: column
-    gap: 3mm
 
   *:not(section)
     margin: 0
